# spgrid_topo_opt

./: .gitignore  CMakeLists.txt  README.md
misc/: util.h  volume_renderer.cpp  volume_renderer.h  volume_rendering_kernel.cu
scripts/: crash_report.py  memory_monitor.py  opt_bird_beak.py  opt_bridge.py  opt_hemisphere.py  opt_michell_sphere.py  opt_plane_wing.py  opt_shear_plate.py  opt_wheel.py  topo_opt.py
solver/: Elasticity_Solver_Data.h  Flags.h  LICENSE  Makefile  SPGrid_CPU_Solver.cpp
solver/CG/: CG_SYSTEM.cpp  CG_SYSTEM.h  CG_VECTOR.cpp  CG_VECTOR.h  CONJUGATE_GRADIENT.cpp  CONJUGATE_GRADIENT.h  KRYLOV_SYSTEM_BASE.cpp  KRYLOV_SYSTEM_BASE.h  KRYLOV_VECTOR_BASE.cpp  KRYLOV_VECTOR_BASE.h
solver/CPU_Kernels/: Clear.h  Correction.h  Flaging.h  Project.h  Project_Null_Space.h  SPGrid_Gauss_Seidel.h  SPGrid_Linear_Elasticity.h  SPGrid_Transpose.h  Stiffness_Matrices.h  Validate_Blocks.h
solver/MG/: Delete_Dirichlet_Equations.h  Elasticity_Matrix.cpp  Elasticity_Matrix.h  Elasticity_Stencil_Data.h  Galerkin_Coarsen.h  Linear_Elasticity_SIMD_Cell_Multiply.h  Linear_Elasticity_Stiffness_Matrix.h  Linear_Elasticity_System_Matrix.h  Multigrid_Hierarchy.h  Prolongation.h  Restriction.h  SPGrid_Stencil_Multiply.h  Trilinear_Cell_Transfer_Operators_SIMD.h
topo_opt/: LICENSE  fem_interface.h  hex_fem.cpp  hex_fem.h  interface_test.cpp  misc.cpp  spgrid_topo_opt.cpp  spgrid_topo_opt.h
topo_opt/objective/: minimal_compliance.cpp  objective.h
topo_opt/optimizer/: optimality_criterion.cpp  optimizer.h
